<resources>
    <string name="app_name">InTime</string>
    <string name="in">In</string>
    <string name="time">Time</string>
    <string name="onboarding_describe_1">Create a unique emotional story that\n describes better than words.</string>
    <string name="onboarding_describe_2">"Craft a seamless timeline of productivity,\n where actions speak louder than schedules."</string>
    <string name="onboarding_describe_3">"Promote teamwork and seamless\n communication among managers and team members."</string>
    <string name="get_started">Get Started</string>
    <string name="task_manage">Task management &amp; project \n management</string>
    <string name="signin_with">Signin with</string>
    <string name="or">Or</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forget_password">Forget password ?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="u_login"> <u>Login</u> </string>
    <string name="u_signup"> <u>Sign up</u> </string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signup_with">Signup with</string>
    <string name="enter_your_email_then_we_will_send_you_otp_to_reset_new_password">Enter your Email then we will send you OTP to reset new password</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_the_otp_we_just_sent_to_you_then_start_rest_new_password">Enter the OTP we just sent to you then start rest new password</string>
    <string name="reset_new_password">Reset new password</string>
    <string name="save_new_password">Save New Password</string>
    <string name="new_password">New Password</string>
    <string name="resend_otp_in">Resend OTP </string>
    <string name="did_not_receive_otp">Didn\'t receive OTP ?</string>
    <string name="home">Home</string>
    <string name="tasks">Tasks</string>
    <string name="projects">Projects</string>
    <string name="calender">Calender</string>
    <string name="total_score">Total Score</string>
    <string name="points">Points</string>
    <string name="in_progress">In Progress</string>
    <string name="your_recent_tasks">Your recent tasks</string>
    <string name="your_recent_projects">Your recent projects</string>
    <string name="search_anything">Search anything…</string>
    <string name="notifications">Notifications</string>
    <string name="create_a_task">Create a Task</string>
    <string name="details">Details</string>
    <string name="create">Create</string>
    <string name="task">Task</string>
    <string name="project">Project</string>
    <string name="tag">Tag</string>
    <string name="add_step">Add Step</string>
    <string name="log_out">Log Out</string>
    <string name="edit">Edit</string>
    <string name="username">Username</string>
    <string name="my_profile">My Profile</string>
    <string name="to_do">To Do</string>
    <string name="completed">Completed</string>
    <string name="backlog">Backlog</string>
    <string name="new_task">New Task</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="upload_cover">upload cover</string>
    <string name="add_new_step">Add New Step</string>
    <string name="task_title">Task %s</string>
    <string name="task_date">%s %s</string>
    <string name="task_progress">%s completed</string>
    <string name="task_points">%s / %s</string>
    <string name="to_do_task_date">%s - %s</string>
    <string name="ongoing">Ongoing</string>
    <string name="agenda">Agenda</string>
    <string name="all_projects">All Projects</string>
    <string name="as_admin">As Admin</string>
    <string name="as_member">As Member</string>
    <string name="view_tasks">View Tasks</string>
    <string name="new_project">New Project</string>
    <string name="wait_to_start">Wait To Start</string>
    <string name="finished">Finished</string>
    <string name="all">All</string>
    <string name="your_task">Your Task</string>
    <string name="next">Next</string>
    <string name="full_name">Full Name</string>
    <string name="this_email_already_exists">This email already exists</string>
    <string name="phone">Phone</string>
    <string name="empty_field">Empty Field</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="name_error">Name must be at least 3 characters</string>
    <string name="phone_error">phone must be 11 digits</string>
    <string name="password_error"><![CDATA[password must be more than 8 and contain digits, upper letter & lower letter and don\'t contain space]]></string>
    <string name="now">Now</string>
    <string name="email_not_registered">Email not registered</string>
    <string name="wrong_code">Wrong Code</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="password_must_contain_at_least_one_lowercase_letter">Password must contain at least one lowercase letter</string>
    <string name="password_must_contain_at_least_one_uppercase_letter">Password must contain at least one uppercase letter</string>
    <string name="password_must_contain_at_least_one_digit">Password must contain at least one digit</string>
    <string name="password_must_contain_at_least_one_special_character">Password must contain at least one special character</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="password_not_match">Password not match</string>
    <string name="password_must_be_unique">Password must be unique</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading...</string>
    <string name="password_pattern">*********</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="select_your_option">Select Your Option</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="remove">Remove</string>
    <string name="upload_new">Upload New</string>
    <string name="title">Title</string>
    <string name="about">About</string>
    <string name="view_profile">View Profile</string>
    <string name="level">Level</string>
    <string name="rank">Rank</string>
    <string name="tasks_done">Tasks Done</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to delete your account?</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="save">Save</string>
    <string name="total_points">Total Points</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="must_be_different_from_the_current_password">Must be different from the current password</string>
    <string name="password_changed_successfully">Password Changed Successfully</string>
    <string name="_20">+20</string>
    <string name="_phone">+20%1$s</string>
    <string name="my_phone">+2%1$s</string>
    <string name="delete">Delete</string>
    <string name="delete_cover">Delete Cover</string>
    <string name="uploaded">uploaded</string>
    <string name="no_projects_found">No Projects Found</string>
    <string name="no_tasks_found">No Tasks Found</string>
    <string name="end_at">End At: %1$s</string>
    <string name="description">Description</string>
    <string name="update_task">Update Task</string>
    <string name="from_date">From: %1$s</string>
    <string name="to_date">To: %1$s</string>
    <string name="no_steps_found">No Steps Found</string>
    <string name="complete">Complete</string>
    <string name="add_task">Add Task</string>
    <string name="share">Share</string>
    <string name="update_project">Update Project</string>
    <string name="share_link">Share Link</string>
    <string name="_0">0%1$s</string>
    <string name="link">Link</string>
    <string name="join_project">Join Project</string>
    <string name="join">Join</string>
    <string name="completed1">Completed1</string>
    <string name="search_task">Search Task</string>
    <string name="type_your_message">Type your message...</string>
    <string name="add_a_comment">Add a comment...</string>
    <string name="no_notification_found">No Notification Found</string>
    <string name="filter_priority">Filter by Priority</string>
    <string name="filter_tag">Filter by Tag</string>
    <string name="sort_by">Sort By</string>
    <string name="filter_by">Filter By</string>
    <string name="submit">Submit</string>
    <string name="email_is_empty">Email is empty</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="phone_is_empty">Phone is empty</string>
    <string name="name_is_empty">Name is empty</string>
    <string name="no_connection">No Connection</string>
    <string name="something_went_wrong_try_again">Something Went Wrong, Try Again</string>
    <string-array name="sort_options">
        <item>Sort by Name</item>
        <item>Sort by Start Date</item>
        <item>Sort by End Date</item>
    </string-array>
</resources>