<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".ui.signing.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/standard_25">

        <include
            android:id="@+id/signWithSocialMedia"
            layout="@layout/layout_sign_with_social_media"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <EditText
            style="@style/InTime.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/full_name"
            android:inputType="text" />

        <EditText
            style="@style/InTime.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_40"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            style="@style/InTime.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_40"
            android:autofillHints="password"
            android:drawableEnd="@drawable/ic_eye"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirmPassword"
            style="@style/InTime.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_40"
            android:autofillHints="password"
            android:drawableEnd="@drawable/ic_eye"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/standard_25">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/already_have_an_account"
                android:textColor="@color/fifth"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/logInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/login"
                android:textColor="@color/first"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/signUpButton"
            style="@style/InTime.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

    </LinearLayout>

</ScrollView>