<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/InTime.CardView.AlertDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/standard_20"
        android:paddingVertical="@dimen/standard_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/delete_account"
            android:textColor="@color/primary"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto"
            android:text="@string/are_you_sure_you_want_to_delete_your_account"
            android:textColor="@color/secondary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_50">

            <Button
                android:id="@+id/cancelButton"
                style="@style/InTime.Button.Cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/deleteAccountButton"
                style="@style/InTime.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:padding="0dp"
                android:text="@string/delete" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>