<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".ui.forgetPassword.EmailForNewPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/standard_25">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_25"
            android:importantForAccessibility="no"
            android:src="@drawable/forget_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_25"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/forget_password"
            android:textColor="@color/sixth"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_25"
            android:fontFamily="@font/roboto"
            android:lineSpacingExtra="4sp"
            android:text="@string/enter_your_email_then_we_will_send_you_otp_to_reset_new_password"
            android:textAlignment="center"
            android:textColor="@color/second"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            style="@style/InTime.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_10"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/sentOTPButton"
            style="@style/InTime.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/standard_25"
            android:text="@string/send_otp" />

    </LinearLayout>

</ScrollView>