<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".ui.forgetPassword.ResetNewPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/standard_25">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_25"
            android:importantForAccessibility="no"
            android:minHeight="200dp"
            android:src="@drawable/lock" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_25"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/reset_new_password"
            android:textColor="@color/blue_dark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            style="@style/InTime.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_30"
            android:autofillHints="password"
            android:drawableEnd="@drawable/ic_eye"
            android:hint="@string/new_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirmPassword"
            style="@style/InTime.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_25"
            android:autofillHints="password"
            android:drawableEnd="@drawable/ic_eye"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/saveNewPasswordButton"
            style="@style/InTime.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/standard_25"
            android:text="@string/save_new_password" />

    </LinearLayout>

</ScrollView>